	  file transfer window
	* Mouse-over hyperlink coloring is now themeable
	* Buddy Pounces now have a proper management window. (Kevin Stange)
	* Buddy icons maintain aspect ratio when resized
	* The last used directory is remembered for opening or saving files and
	  buddy icons
	* Add an SVG version of our desktop icon, gaim.svg (John Oyler)

	Preference Changes:
	* Preferences have been substantially reorganized and cleaned up
	* Smiley theme descriptions are now shown correctly for the highlighted
	  smiley theme (Levi Bard)
	* All Buddy List preferences have been moved to the Buddies menu of
	  the buddy list window.
	* Proxy settings will be taken from Gnome if it is running.  These may
	  still be overridden on a per-account basis.
	* Removed "Dim idle buddies;" behavior is now always enabled
	* Removed keyboard shortcut preferences for ctrl-B/I/U; enabled by
	  default, but won't interfere with bindings set by the GTK theme
	* Removed keyboard shortcuts preferences for ctrl-# to insert a smiley;
	  behavior removed from Gaim
	* Removed "Enter" vs. "Ctrl-Enter" to send; "Enter" sends by default,
	  but it is now possible to change this binding in your GTK theme
	* Removed "Show multi-colored screennames in chats;" behavior is now
	  always enabled and screenname colors automatically adjust themselves
	  to compensate for background color.
	* Removed "Raise Buddy List Window on Events" and the related behavior
	* Removed "Display remote nicknames if no alias is set"
	* Removed "Show idle times" and "Show warning levels" on the buddy
	  list; behavior is now always enabled
	* Removed "Auto-expand contacts;" contacts expand only when dragging
	  buddies around the buddy list
	* Removed conversation and buddy list buttons and related preferences
	* Removed "Raise conversation window" preferences; moved feature to
	  the notify plugin
	* Removed "Show alias in tabs/titles;" behavior is now always enabled